--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+  <body class="text-center">
+  </header>
+  <div class= row>
+  	<section class="col-lg-6">
+  		<div class="subject">
+  			<h1 class="cover-heading">Bienvenue sur mon PortFolio</h1>
+  			<p class="lead">A travers ce site, vous trouverez mes réalisations<br> ainsi que mes différentes compétences.</p>
+  			<p class="lead">
+  				<a href="/realisations" class="btn btn-lg btn-secondary">Laissez vous guider</a>
+  			</p>
+  		</div>
+  	</section>
+  </div>
+</body>
