--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,63 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
+<main role="main" class="container">
+
+	<div class="my-3 p-3 bg-white rounded box-shadow">
+		<h6 class="border-bottom border-gray pb-2 mb-0">Derniéres réalisations :</h6>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+			<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<strong class="d-block text-gray-dark">Création de landing pages</strong>
+				Landing page ayant pour but de promouvoir la formation The hacking project. Ces 2 pages avaient pour but de susciter l'intéret auprés de 2 publics différents(les jeunes diplomés ainsi qu'un public plus mature). Le but de ces pages est de récupérer leurs adresses mails et les faire souscrire à une newsletter.<br>
+				<a href="https://thplille.herokuapp.com/hackers" onclick="window.open(this.href); return false;">Lien jeune diplomé</a>  -   <a href="https://thplille.herokuapp.com" onclick="window.open(this.href); return false;">Lien public mature</a>  
+			</p>
+		</div>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=e83e8c&fg=e83e8c&size=1" alt="" class="mr-2 rounded">
+			<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<strong class="d-block text-gray-dark">Création d'une application rails compléte</strong>
+				Sur le modéle de plateforme Eventbrite, création d'une plateforme de gestion d'événements. Création d'une base de données relationnelles HABTM avec création d'utilisateurs pouvant s'identifier, créer des évenements ayant une temporalité. L'application intégre aussi un systéme de gestion de paiement.<br>
+				<a href="https://boiling-garden-48133.herokuapp.com/" onclick="window.open(this.href); return false;">Lien vers l'application</a>
+			</p>
+		</div>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=6f42c1&fg=6f42c1&size=1" alt="" class="mr-2 rounded">
+			<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<strong class="d-block text-gray-dark">Création de sites professionnels</strong>
+				Création de plusieurs sites destinés à des professionnels avec gestion d'utilisateurs et de vente en ligne.
+			</p>
+		</div>
+	</div>
+
+	<div class="my-3 p-3 bg-white rounded box-shadow">
+		<h6 class="border-bottom border-gray pb-2 mb-0">Compétences</h6>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+			<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<div class="d-flex justify-content-between align-items-center w-100">
+				</div>
+				<span class="d-block"> Linux Ubuntu 16.02, HTML 5.2, CSS 3.0, Javascript 1.8.5, Jquery 3.2.1 (à consolider), maitrise de Bootstrap et de la plateforme heroku  </span>
+			</div>
+		</div>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+			<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<div class="d-flex justify-content-between align-items-center w-100">
+					<strong class="text-gray-dark">Langage de programmation</strong>
+					<a href="https://github.com/JoseStall" onclick="window.open(this.href); return false;">Mon compte Github</a>
+				</div>
+				<span class="d-block">Ruby 2.4.5, Ruby-on-Rails, nombreuses Gems associées: Devise, Stripe, Nokogiri, Watir...</span>
+			</div>
+		</div>
+		<div class="media text-muted pt-3">
+			<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+			<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+				<div class="d-flex justify-content-between align-items-center w-100">
+					<strong class="text-gray-dark">Réseaux sociaux</strong>
+					<a href="https://twitter.com/Thp_Lille" onclick="window.open(this.href); return false;">Me suivre</a>
+				</div>
+				<span class="d-block">Création d'un bot twitter avec fonction de streaming par mots clés et de réponses automatisés pour certaines mentions.</span>
+			</div>
+		</div>
+		<small class="d-block text-right mt-3">
+			<a href="#">Bien d'autres compéteces encore</a>
+		</small>
+	</div>
