--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,20 +1,20 @@
 <main role="main" class="container">
 
 	<div class="my-3 p-3 bg-white rounded box-shadow">
-		<h6 class="border-bottom border-gray pb-2 mb-0">Derniéres réalisations :</h6>
+		<h6 class="border-bottom border-gray pb-2 mb-0">Dernières réalisations :</h6>
 		<div class="media text-muted pt-3">
 			<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
 			<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
 				<strong class="d-block text-gray-dark">Création de landing pages</strong>
-				Landing page ayant pour but de promouvoir la formation The hacking project. Ces 2 pages avaient pour but de susciter l'intéret auprés de 2 publics différents(les jeunes diplomés ainsi qu'un public plus mature). Le but de ces pages est de récupérer leurs adresses mails et les faire souscrire à une newsletter.<br>
-				<a href="https://thplille.herokuapp.com/hackers" onclick="window.open(this.href); return false;">Lien jeune diplomé</a>  -   <a href="https://thplille.herokuapp.com" onclick="window.open(this.href); return false;">Lien public mature</a>  
+				Landing page ayant pour objectif de promouvoir la formation The hacking project. Ces 2 pages ont pour but de susciter l'intérêt auprés de 2 publics différents(les jeunes diplômés et les professionnels). Le Call-to-action de ces pages est de récupérer leurs adresses mails et les faire souscrire à une newsletter.<br>
+				<a href="https://thplille.herokuapp.com/hackers" onclick="window.open(this.href); return false;">Lien jeune diplomé</a>  -   <a href="https://thplille.herokuapp.com" onclick="window.open(this.href); return false;">Lien professionnel</a>  
 			</p>
 		</div>
 		<div class="media text-muted pt-3">
 			<img data-src="holder.js/32x32?theme=thumb&bg=e83e8c&fg=e83e8c&size=1" alt="" class="mr-2 rounded">
 			<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-				<strong class="d-block text-gray-dark">Création d'une application rails compléte</strong>
-				Sur le modéle de plateforme Eventbrite, création d'une plateforme de gestion d'événements. Création d'une base de données relationnelles HABTM avec création d'utilisateurs pouvant s'identifier, créer des évenements ayant une temporalité. L'application intégre aussi un systéme de gestion de paiement.<br>
+				<strong class="d-block text-gray-dark">Création d'une application rails complète</strong>
+				Sur le modèle de plateforme Eventbrite, création d'une plateforme de gestion d'évènements. Création d'une base de données relationnelles HABTM avec création d'utilisateurs pouvant s'identifier, créer des évenements ayant une temporalité. L'application intègre aussi un système de gestion de paiement.<br>
 				<a href="https://boiling-garden-48133.herokuapp.com/" onclick="window.open(this.href); return false;">Lien vers l'application</a>
 			</p>
 		</div>
@@ -54,10 +54,10 @@
 					<strong class="text-gray-dark">Réseaux sociaux</strong>
 					<a href="https://twitter.com/Thp_Lille" onclick="window.open(this.href); return false;">Me suivre</a>
 				</div>
-				<span class="d-block">Création d'un bot twitter avec fonction de streaming par mots clés et de réponses automatisés pour certaines mentions.</span>
+				<span class="d-block">Création d'un bot twitter avec fonction de streaming par mots clés et de réponses automatisées pour certaines mentions.</span>
 			</div>
 		</div>
 		<small class="d-block text-right mt-3">
-			<a href="#">Bien d'autres compéteces encore</a>
+			<a href="#">Bien d'autres compétences encore</a>
 		</small>
 	</div>
