--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,14 @@
         <nav class="nav nav-bar-right">
           <a class="nav-link active" href="/">Accueil</a>
           <a class="nav-link" href="/realisations">Réalisations</a>
-          <a class="nav-link" href="#">Mon CV</a>
+          <a class="nav-link" href="/cv">Mon CV</a>
           <a class="nav-link" href="/contact">Contact</a>
         </nav>
       </div>
       <%= yield %>
       <footer >
         <div>
-          <p>Réalisé par mes soins, à l'aide de <a href="https://getbootstrap.com/">Bootstrap</a>.</p>
+          <p>Réalisé par mes soins, à l'aide de <a href="https://getbootstrap.com/">Bootstrap</a> et Ruby-on-rails.</p>
         </div>
       </footer>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
