--- a/app/views/home/cv.html.erb
+++ b/app/views/home/cv.html.erb
@@ -4,9 +4,9 @@
   	<section class="col-lg-6">
   		<div class="subject">
   			<%= form_tag("/cv1", method: "get") do %>
-  			<%= label_tag(:mail, "Email:") %>
-  			<%= email_field_tag(:mail) %> <br>
-  			<%= submit_tag("Recevoir mon cv") %> 
+  		<div><%= label_tag(:mail, "Email:") %></div>
+  		<div><%= email_field_tag(:mail) %></div>
+  		<div><%= submit_tag("Recevoir mon cv") %></div>
   			<% end %>
   		</div>
   	</section>
