--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -58,6 +58,7 @@
 			</div>
 		</div>
 		<small class="d-block text-right mt-3">
-			<a href="#">Bien d'autres compétences encore</a>
+			<a href="/cv">Bien d'autres compétences encore</a>
 		</small>
 	</div>
+</main>
